# scryer

./: .gitignore  AGENTS.md  README.md  config.example.toml  flake.nix  pyproject.toml
src/scryer/: __init__.py  cli.py  config.py  daemon.py  db.py  doctor.py  gh.py  models.py  poller.py  pr.py  runner.py
src/scryer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
