[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scryer"
version = "0.1.0"
description = "GitHub enhancement issue daemon driven by Codex CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
scryer = "scryer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

